# ebusd

./: .appveyor.1.yml  .appveyor.yml  .travis.yml  CMakeLists.txt  Makefile  README.md  build.bat  build.sh  make.bat
.github/workflows/: cmake.yml
cmake/: FindMariaDB.cmake  FindMySqlLibs.cmake
config/: config.h.in  settings_example.xml
config/systemd/: README.md  ebusd.service  readme
doc/: Betriebsdatenerfassung.md  make.bat  settings_example.xml
doc/bilder/: Spannungspegel.xls
doc/schematic/: eBus_RS232_board.bb  eBus_RS232_schematic.sch
inc/: ebus.h  item.h  main.h  msg.h  readme.txt  serial.h
inc/ebusd/: ebus.h  item.h  msg.h  serial.h
include/: ebus.h  msg.h  serial.h
lib/: readme.txt
spike/test_cppcms/: config.js  main.cpp  makefile
spike/test_log/: main.cpp  main.h  makefile
src/: ebus.cpp  item.cpp  main.cpp  msg.cpp  serial.cpp
test/: CMakeLists.txt  test_datatypes.cpp  test_rs232.cpp
www/: index.php  setting.php.tmpl  wolf_data_mde.php  wolf_data_temp.php
www/css/: stylish-portfolio.css
